@@ -6,7 +6,7 @@
 	# See the README and LICENSE files for details
 
 	# --------------------------------------------------------
-	# $Id: login_select_proj_page.php,v 1.32 2004-08-01 15:22:11 vboctor Exp $
+	# $Id: login_select_proj_page.php,v 1.33 2004-08-05 17:58:47 jlatour Exp $
 	# --------------------------------------------------------
 ?>
 <?php
@@ -15,7 +15,7 @@
 <?php require_once( 'core.php' ) ?>
 <?php auth_ensure_user_authenticated() ?>
 <?php
-	$f_ref = strip_tags( gpc_get_string( 'ref', '' ) );
+	$f_ref = gpc_get_string( 'ref', '' );
 ?>
 <?php html_page_top1() ?>
 <?php html_page_top2a() ?>
@@ -27,7 +27,7 @@
 <table class="width50" cellspacing="1">
 <tr>
 	<td class="form-title" colspan="2">
-		<input type="hidden" name="ref" value="<?php echo $f_ref ?>" />
+		<input type="hidden" name="ref" value="<?php echo urlencode( $f_ref ) ?>" />
 		<?php echo lang_get( 'login_title' ) ?>
 	</td>
 </tr>
